# Learn

./: .gitattributes  .gitignore  README.md  待学习的博客文章.txt
C/: ASCII编码表.xlsx  C语言编码风格指南.docx
C++/: C++编码风格指南.docx  cl编译器选项说明.txt
C++/Algorithm/: plan.txt
C++/Modern C++/: Modern C++介绍.txt
C++/Patterns/: C++代码框架.txt
CMake/: cmake指令帮助文档.txt
CMake/hellocmake/: CMakeLists.txt  hellocmake.cpp
CMake/helloqtcmake/: CMakeLists.txt  helloqtcmake.pro
CMake/hellovscmake/: CMakeLists.txt  hellovscmake.cpp  hellovscmake.h
CMake/variable/: CMakeLists.txt  fibonacci.cpp  setup.bat
Cppcheck/: Cppcheck使用方法.txt
Cppcheck/function/: function.c
Cppcheck/hellocppcheck/: error.txt  hellocppcheck.c
GDB/aarch64-linux-gnu/: gcc-linaro-7.5.0-2019.12-x86_64_aarch64-linux-gnu.rar
GDB/arm-gdb/: arm gdb和gdbserver编译指南.docx  gdb交叉编译命令.txt
GDB/coredump/: Makefile  coredump.c
GDB/hellogdb/: Makefile  hellogdb.c
Go/: Go语言学习计划.txt  userDefineLang_Go.xml
Java/helloworld/: HelloWorld.java
Linux/: linux常用命令.txt
Linux/apt下载工具/: libapt-pkg5.0_1.6.14_amd64.deb
Linux/copy/: Makefile  copy.c  file.txt
Linux/dir/: Makefile  directory.c  main.c
Linux/document/: Linux中所有信号类型及其作用.xlsx
Linux/exec/: Makefile  exec.c  welcome.c
Linux/fileinfo/: Makefile  fileinfo.c
Linux/helloworld/: Makefile  helloworld.c
Linux/vim配置文件/: .vimrc
Makefile/: makefile中常用变量.txt  make命令参数和选项.txt
Makefile/command/: Makefile
Makefile/compile/: Makefile
Makefile/condition/: Makefile
Makefile/contains/: Makefile
Makefile/error/: Makefile
Makefile/file/: Makefile  fileopt.c  fileopt.h  main.c
Makefile/function/: Makefile
Makefile/helloworld/: Makefile  helloworld.c  helloworld.i  helloworld.s
MySQL/: MySQL基本操作命令.txt
Python/: Python语言学习计划.txt
Qt/: setupenv.bat
SQLite/: SQLite基本操作命令.txt
Valgrind/: valgrind使用方法.txt
(+2301 files in other folders)
